implement communicate function so that when user create account -> auto create profile